--- a/TimeseriesLibrary/.project
+++ b/TimeseriesLibrary/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>timeserieslib</name>
+	<name>TimeseriesLibrary</name>
 	<comment></comment>
 	<projects>
 	</projects>
