--- a/SerializationRefactor/.classpath
+++ b/SerializationRefactor/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/TimeseriesLibrary/lib/asm-4.0.jar"/>
 	<classpathentry kind="lib" path="/TimeseriesLibrary/lib/carbonite-1.3.2.jar"/>
