--- a/TimeseriesLib/.project
+++ b/TimeseriesLib/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SerializationRefactor</name>
+	<name>TimeseriesLib</name>
 	<comment></comment>
 	<projects>
 	</projects>
