Config nu via zookeeper, in combinatie met het StormConfiguration project

--- a/TimeseriesLib/.classpath
+++ b/TimeseriesLib/.classpath
@@ -55,5 +55,6 @@
 	<classpathentry kind="lib" path="lib/zookeeper-3.4.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/StormConfiguration"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
