--- a/StormConfiguration/.classpath
+++ b/StormConfiguration/.classpath
@@ -1,58 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/asm-4.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/carbonite-1.4.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/chill-java-0.3.5.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/clj-stacktrace-0.2.4.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/clj-time-0.4.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/clojure-1.5.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/clout-1.0.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/commons-lang-2.5.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/compojure-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/core.incubator-0.1.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/curator-client-2.4.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/curator-framework-2.4.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/disruptor-2.10.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/guava-13.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/hiccup-0.3.6.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/httpclient-4.3.3.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/jetty-6.1.26.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/jetty-util-6.1.26.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/jgrapht-core-0.9.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/jline-2.11.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/joda-time-2.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/kryo-2.21.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/log4j-over-slf4j-1.6.6.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/logback-classic-1.0.6.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/logback-core-1.0.6.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/math.numeric-tower-0.0.1.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/minlog-1.2.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/netty-3.2.2.Final.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/netty-3.6.3.Final.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/objenesis-1.2.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/reflectasm-1.07-shaded.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/ring-core-1.1.5.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/ring-devel-0.3.11.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/ring-jetty-adapter-0.3.11.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/ring-servlet-0.3.11.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/servlet-api-2.5-20081211.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/slf4j-api-1.6.5.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/snakeyaml-1.11.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/storm-core-0.9.2-incubating.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/tools.cli-0.2.4.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/tools.logging-0.2.3.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/tools.macro-0.1.0.jar"/>
-	<classpathentry kind="lib" path="/TimeseriesLib/lib/zookeeper-3.4.5.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="test">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
