--- a/StormConfiguration/pom.xml
+++ b/StormConfiguration/pom.xml
@@ -9,13 +9,8 @@
 		<groupId>org.apache.curator</groupId>
 		<artifactId>curator-framework</artifactId>
 		<version>2.4.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.apache.curator</groupId>
-		<artifactId>curator-framework</artifactId>
-		<version>2.4.0</version>
-	</dependency>
-		<dependency>
+	  </dependency>
+	  <dependency>
 		<groupId>org.apache.zookeeper</groupId>
 		<artifactId>zookeeper</artifactId>
 		<version>3.4.5</version>
@@ -32,9 +27,17 @@
 		            <groupId>javax.jms</groupId>
 		            <artifactId>jms</artifactId>
 		    </exclusion>
+	        <exclusion> 
+	        	<groupId>org.slf4j</groupId>
+	        	<artifactId>slf4j-log4j12</artifactId>
+	      	</exclusion>
+	      	<exclusion> 
+	        	<groupId>log4j</groupId>
+	        	<artifactId>log4j</artifactId>
+	      	</exclusion>
+		    
 		</exclusions>
 	</dependency>
-	
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
