--- a/TimeseriesLib/.classpath
+++ b/TimeseriesLib/.classpath
@@ -23,5 +23,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/StormConfiguration"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
