--- a/TimeseriesSensorLib/.classpath
+++ b/TimeseriesSensorLib/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/TimeseriesLib"/>
 	<classpathentry kind="lib" path="/TimeseriesLib/lib/slf4j-api-1.6.5.jar"/>
 	<classpathentry kind="lib" path="/TimeseriesLib/lib/storm-core-0.9.2-incubating.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/StormConfiguration"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
